2011-12-14 Version 1.5.1
	* Version number added to XML
	* Added maximum to bandwidth reservation between the channels (in addition to combined total bandwidth)
	* Darker colors for bandwidth usage layer for better visibility
	* Fixed slot number calculation from FATDMA information (also values below startslot are now included)

2011-12-08 Version 1.5
	* Beta release

2011-12-02 Version 1.4
	* Saving issues to database
	* Bandwidth areas layer

2011-11-29 Version 1.3

	* User interfaces for performing the AIS VHF Datalink Health Check and displaying its results
	* Database components for parts of the AIS VHF Datalink Health Check
	* Show on map dialog for selecting which stations are shown on map
	* Default interference coverage layer for directional antennas

2011-11-23 Version 1.2

	* Slotmap for any point

2011-11-22 Version 1.1

	GUI:	
    * List of AIS VHF Datalink Health Check rules available in the menu
	* "About EAVDAM" menu added
	* Hide functionality for temporarily hiding individual stations from map
	* Default coverage for directional antennas
	* Other organizations' contact information accessible in Edit Station Information screen
	* Visible layers are saved when application is exited and restored when started again
    * Icon for application
	
	DB:
	* Changed maximum length of the ftp-directory to 150 characters
	* Database alteration for this implemented (no need to create a new database)
    * Changed name of the exported xml-file from organization name.xml to organizationname.xml
    * Fixed (Major Bug): Importing data removes the data from the default user. Now the default user is checked against each xml-file; if xml is from the default user of this application, xml is not imported.
    * Fixed: Import folder created if it doesn't exist